      * [r_1.0.31] Warning messages removed when using the lFormula function

2024-06-24 Giovanny Covarrubias Pazaran <cova_ruber@live.com.mx>

      * [r_1.0.40] 'simage' function added for sparsity plots and better documentation of GxE models

2025-04-27 Giovanny Covarrubias Pazaran <cova_ruber@live.com.mx>

      * [r_1.0.60] enhanced the 'start' and 'returnMod' arguments to do prediction of unobserved levels
      * [r_1.0.60] corrected the optimizer selection in glms 
      * [r_1.0.60] minor modifications to getMME function

2025-07-27 Giovanny Covarrubias Pazaran <cova_ruber@live.com.mx>

      * [r_1.0.70] updated CRAN version

2025-09-27 Giovanny Covarrubias Pazaran <cova_ruber@live.com.mx>

      * [r_1.0.80] we moved to build the U matrix (n x n) using the kronecker product to speed up computations in big models
      * [r_1.0.80] closure issue fixed by using the native match.call() and just changing from lmer/glmer to lFormula/glFormula
      * [r_1.0.80] proper specification of the modular functions from lme4
      * [r_1.0.80] added balanceData function
      * [r_1.0.80] added a new dataset DT_big to show how to fit big genomic models
      
2025-12-27 Giovanny Covarrubias Pazaran <cova_ruber@live.com.mx>

      * [r_1.0.90] now we use get the standard error of BLUPs using the lme4:::condVar function and then we apply the rotations and subset. That makes everything faster
      * [r_1.0.90] now we have added the function getCi to retrieve the inverse of the coefficient matrix
      * [r_1.0.90] now we have added the function Dtable to retrieve the a template for the hyper-table in predict
      * [r_1.0.90] now we have added the first version of the predict function
      * [r_1.0.90] now the user can specify the random intercepts using the name of the regular variable and internally we will create the neccesary variables

** TO DO
+ check why the rotation is not working properly when we have more than one random effect

